--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
+	<!-- Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-XXXXXXXXXX');
+	</script>
+	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harman</title>
@@ -12,7 +23,6 @@
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-
 </head>
 
 <body class="light-mode">
@@ -243,7 +253,7 @@
                     </h2>
                     <div id="faqCollapseTwo" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            I provide meal prep guidance according to your body requirements. Use the macro calculator below for a quick estimate.
+                            I provide meal prep guidance according to your body requirements and your schedule.
                         </div>
                     </div>
                 </div>
